--- a/el_futurix/test.html
+++ b/el_futurix/test.html
@@ -17,21 +17,29 @@
         background-color: transparent;
         color: aliceblue;
         font-family: sansation;
+        padding-bottom: 100px;
     }
 
     input {
-        border: solid, white, 0 0 1px 0;
+        border: none;
+        border-bottom: solid white 1px;
         background-color: rgba(0, 0, 0, 0.604);
         border-radius: 10px;
         height: 30px;
         padding-left: 15px;
-        width: 250px;
+        width: 100%;
+        max-width: 300px;
         color: white;
         font-size: larger;
     }
 
     #submit {
         width: fit-content;
+        border-radius: 5px;
+        background-color: aquamarine;
+        color: black;
+        font-weight: 700;
+        border: none;
     }
 
     #submit:hover {
@@ -47,16 +55,11 @@
         right: 0;
         bottom: 0;
         background-color: #00000096;
-
-        /* padding: 20px; */
-        /* box-sizing: border-box; */
-        /* background-color: #79acffdd; */
     }
 
     #frm_cnt {
-        /* position: fixed; */
         width: fit-content;
-        margin: 0;
+        margin: 0 auto;
         margin-top: 50px;
         padding: 20px;
         border-radius: 15px;
@@ -73,7 +76,6 @@
         background-color: #272727;
         position: absolute;
         right: 10px;
-        text-align: end;
         cursor: pointer;
     }
 
@@ -94,7 +96,7 @@
 
     .image {
         flex: 1;
-        min-width: 500px;
+        min-width: 300px;
         max-width: 500px;
         padding: 20px;
     }
@@ -108,6 +110,7 @@
     .description {
         flex: 2;
         padding: 20px;
+        max-width: 500px;
     }
 
     h1 {
@@ -128,30 +131,10 @@
     .container .btn {
         background-color: #481313;
         border-radius: 15px;
-        border-radius: 10px;
         width: fit-content;
         padding: 10px;
-        font-size: x-large;
+        font-size: large;
         cursor: pointer;
-    }
-
-    /* Responsive adjustments */
-    @media (max-width: 768px) {
-        .container {
-            flex-direction: column;
-        }
-
-        .description {
-            padding: 10px;
-        }
-
-        h1 {
-            font-size: 1.8rem;
-        }
-
-        p {
-            font-size: 1rem;
-        }
     }
 
     .key {
@@ -166,131 +149,89 @@
     }
 
     .val {
-
         padding: 5px;
         color: azure;
         margin-left: auto;
         margin-top: 10px;
     }
 
-    .key {
-  font-weight: 700;
-  font-size: x-large;
-  color: #00d9ff;
-  background-color: #2c0d0d;
-  border-radius: 5px;
-  padding: 5px;
-  width: fit-content;
-  margin-bottom: 5px;
-}
+    /* Responsive adjustments */
+    @media (max-width: 768px) {
+        .container {
+            flex-direction: column;
+            align-items: center;
+        }
 
-.val {
-  font-weight: 100;
-  color: #ffffff;
-}
+        .description {
+            padding: 10px;
+        }
 
-body{
-  padding-bottom: 100px;
-}
+        .image {
+            max-width: 100%;
+        }
 
-#frm_cnt input {
-  border: none;
-  border-bottom: solid #ffffff 1px;
-  border-radius: 0;
-}
+        h1 {
+            font-size: 1.8rem;
+        }
 
-#frm_cnt #submit {
-  border: none;
-  border-radius: 5px;
-  background-color: aquamarine;
-  color: rgb(29, 27, 27);
-}
+        p {
+            font-size: 1rem;
+        }
 
-.rule_book {
-  font-size: larger;
-  font-weight: 800;
-  color: #00D9FF;
-}
+        input {
+            width: 100%;
+        }
+    }
 
-input {
-  padding: 8px;
-  width: 70%;
-  /* height: 40px; */
-  margin: 0;
-  border: 0;
-}
+    @media (max-width: 550px) {
+        .container {
+            align-items: unset;
+        }
+    }
 
-button {
-  padding: 8px 12px;
-  cursor: pointer;
-}
+    .ip_flx {
+        display: flex;
+        align-items: center;
+    }
 
-.name-display {
-  font-size: 0.9em;
-  color: #555;
-  margin-top: 5px;
-}
+    .ip_flx button {
+        border: 0;
+        background-color: #00D9FF;
+        border-radius: 3px;
+        color: black;
+        font-size: x-large;
+        font-weight: 700;
+        height: 30px;
+        padding: 3px;
+        margin-left: 10px;
+    }
 
+    .name {
+        font-size: small;
+        margin: 0;
+        color: #555;
+    }
 
-@media (max-width: 1000px) {
-  .container {
-    flex-direction: column;
-  }
-}
+    .id_elm {
+        margin-bottom: 60px;
+    }
 
-@media (max-width: 550px) {
-  .container {
-    align-items: unset;
-  }
-} 
+    form h4 {
+        cursor: pointer;
+    }
 
-@media (max-width: 430px) {
-  .container {
-    align-items: unset;
-  }
-} 
+    form h4:hover {
+        color: aqua;
+    }
 
-.ip_flx{
-  display: flex;
-}
+    form span {
+        position: relative;
+        top: 8px;
+    }
 
-.ip_flx button{
-  border: 0;
-  background-color: #00D9FF;
-  border-radius: 3px;
-  color: black;
-  font-size: x-large;
-  font-weight: 700;
-  height: 30px;
-  /* width: 40px; */
-  padding: 3px;
-  position: relative;
-  top: 10px;
-  margin-left: 10px;
-}
-
-.name{
-  font-size: small;
-  margin: 0;
-  color: #555;
-}
-
-.id_elm{
-  margin-bottom: 60px;
-}
-
-form h4{
-  cursor: pointer;
-}
-
-form h4:hover{
-  color: aqua;
-}
-
-form span{
-  position: relative;
-  top: 8px;
-}
+    #submit{
+        cursor: pointer;
+    }
 </style>
 
 <body>
@@ -311,7 +252,6 @@ form span{
                         <div class="ip_flx">
                             <input type="text" class="id_flds" id="mem1" name="Member-1" placeholder="Member ID"
                                 required><br><br>
-                            <!-- <button class="gt_btn" type="button">Get</button> -->
                         </div>
                         <h6 class="nameOfID">student name</h6>
                     </div>
@@ -324,7 +264,6 @@ form span{
         </div>
     </div>
 
-
     <div class="container">
         <div class="image">
             <img src="img/thumbs/Product XPO.webp" alt="Competition Image">
@@ -332,8 +271,8 @@ form span{
         <div class="description">
             <h1>PROJECT XPO</h1>
             <p>
-                Embark on an innovative journey at "Project Xpo" where experts, scholars, and visionaries converge to showcase groundbreaking projects and inventive solutions. This prestigious platform fosters an environment where ideas flourish, and boundaries are pushed. Don’t miss the chance to participate in this transformative event, where creativity knows no bounds !
-            <br>
+                Embark on an innovative journey at "Project Xpo" where experts, scholars, and visionaries converge to showcase groundbreaking projects and inventive solutions. This prestigious platform fosters an environment where ideas flourish, and boundaries are pushed. Don’t miss the chance to participate in this transformative event, where creativity knows no bounds!
+                <br>
                 <a class="rule_book" href="https://drive.google.com/file/d/1FuANRxK5jcRMLy28lbZ-tIPLG-uMURjA/view?usp=sharing" target="_blank">RULE BOOK</a>
             </p>
             <div class="btn">REGISTER HERE</div>
@@ -343,16 +282,13 @@ form span{
             <div class="key">Registration Deadline : <span class="val"> 01 November 2024 </span></div>
             <div class="key"> For Further Information:
                 <div class="val">Abirami M - 9345445205</div>
-                 <div class="val">Logeshwaran K - 8610687966</div>
+                <div class="val">Logeshwaran K - 8610687966</div>
             </div>
         </div>
     </div>
-
-    <script src="https://www.gstatic.com/firebasejs/9.24.0/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.24.0/firebase-firestore.js"></script>
     <script type="module">
 
-        var competitionID = "1HFUDpVdTCKQ7Pi9TH8f"
+        var competitionID = "s7rC0nFh5afu6P98XQHX"
 
         import { get_details } from './login.js'
         import { getStudentEmailById, getStudentByEmail, createTeam, isStudentRegisteredForCompetition } from "./reg.js"
@@ -438,9 +374,10 @@ form span{
                             .then((o) => {
                                 if (o) {
                                     createTeam(competitionID, document.getElementById("team-name").value, o.email, obj.leader).then(() => {
+                                        document.getElementsByClassName("btn")[0].innerHTML = "Registered";
+                                        document.getElementsByClassName("btn")[0].onclick = "unset";                                     
                                         alert("registed successfully")
                                         document.getElementById("frm_cv").style.display = "none";
-                                        document.getElementsByClassName("btn")[0].style.innerHTML = "Registered"
                                     })
                                 }
                             }).catch(error => {
