--- a/el_futurix/projectxpo.html
+++ b/el_futurix/projectxpo.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <link rel="stylesheet" href="lolita.css">
+    <link rel="stylesheet" href="lolita.css">
     <title>Form Example</title>
 </head>
 <style>
@@ -14,24 +14,32 @@
     }
 
     body {
-        background-color: rgba(66, 37, 0, 0.47);
+        background-color: transparent;
         color: aliceblue;
         font-family: sansation;
+        padding-bottom: 100px;
     }
 
     input {
-        border: solid, white, 0 0 1px 0;
+        border: none;
+        border-bottom: solid white 1px;
         background-color: rgba(0, 0, 0, 0.604);
         border-radius: 10px;
         height: 30px;
         padding-left: 15px;
-        width: 250px;
+        width: 100%;
+        max-width: 300px;
         color: white;
         font-size: larger;
     }
 
     #submit {
         width: fit-content;
+        border-radius: 5px;
+        background-color: aquamarine;
+        color: black;
+        font-weight: 700;
+        border: none;
     }
 
     #submit:hover {
@@ -47,20 +55,18 @@
         right: 0;
         bottom: 0;
         background-color: #00000096;
-        /* padding: 20px; */
-        /* box-sizing: border-box; */
-        /* background-color: #79acffdd; */
     }
 
     #frm_cnt {
-        /* position: fixed; */
         width: fit-content;
-        /* margin: auto; */
+        margin: 0 auto;
         margin-top: 50px;
         padding: 20px;
         border-radius: 15px;
         background-color: rgba(0, 0, 0, 0.999);
         position: relative;
+        overflow-y: auto;
+        max-height: calc(100vh - 150px);
     }
 
     #frm_cnt .close {
@@ -70,7 +76,6 @@
         background-color: #272727;
         position: absolute;
         right: 10px;
-        text-align: end;
         cursor: pointer;
     }
 
@@ -84,7 +89,7 @@
         justify-content: center;
         align-items: center;
         padding: 20px;
-        background-color: transparent;
+        background-color: rgba(61, 61, 61, 0.47);
         margin: 20px;
         border-radius: 20px;
     }
@@ -92,19 +97,20 @@
     .image {
         flex: 1;
         min-width: 300px;
-        max-width: 400px;
-        padding: 10px;
+        max-width: 500px;
+        padding: 20px;
     }
 
     .image img {
         width: 100%;
         height: auto;
-        border-radius: 8px;
+        border-radius: 15px;
     }
 
     .description {
         flex: 2;
         padding: 20px;
+        max-width: 500px;
     }
 
     h1 {
@@ -125,21 +131,43 @@
     .container .btn {
         background-color: #481313;
         border-radius: 15px;
-        border-radius: 10px;
         width: fit-content;
         padding: 10px;
-        font-size: x-large;
+        font-size: large;
         cursor: pointer;
+    }
+
+    .key {
+        font-size: large;
+        color: rgb(11, 10, 10);
+        font-weight: 900;
+        padding: 10px;
+        background-color: #0f94e6f4;
+        border-radius: 10px;
+        width: fit-content;
+        margin-bottom: 20px;
+    }
+
+    .val {
+        padding: 5px;
+        color: azure;
+        margin-left: auto;
+        margin-top: 10px;
     }
 
     /* Responsive adjustments */
     @media (max-width: 768px) {
         .container {
             flex-direction: column;
+            align-items: center;
         }
 
         .description {
             padding: 10px;
+        }
+
+        .image {
+            max-width: 100%;
         }
 
         h1 {
@@ -149,6 +177,60 @@
         p {
             font-size: 1rem;
         }
+
+        input {
+            width: 100%;
+        }
+    }
+
+    @media (max-width: 550px) {
+        .container {
+            align-items: unset;
+        }
+    }
+
+    .ip_flx {
+        display: flex;
+        align-items: center;
+    }
+
+    .ip_flx button {
+        border: 0;
+        background-color: #00D9FF;
+        border-radius: 3px;
+        color: black;
+        font-size: x-large;
+        font-weight: 700;
+        height: 30px;
+        padding: 3px;
+        margin-left: 10px;
+    }
+
+    .name {
+        font-size: small;
+        margin: 0;
+        color: #555;
+    }
+
+    .id_elm {
+        margin-bottom: 60px;
+    }
+
+    form h4 {
+        cursor: pointer;
+    }
+
+    form h4:hover {
+        color: aqua;
+    }
+
+    form span {
+        position: relative;
+        top: 8px;
+    }
+
+    #submit{
+        cursor: pointer;
     }
 </style>
 
@@ -159,21 +241,24 @@
             <div class="close">X</div>
             <br>
             <h1 id="event_name">Register for Maze Solver</h1>
-            <form id="studentForm" action="" method="" onsubmit="validateForm(event)">
-                <!-- Name field -->
-                <label for="name">Name:</label><br>
-                <input type="text" id="name" name="name" placeholder=" Your name" required><br><br>
 
-                <!-- College field -->
-                <label for="college">College:</label><br>
-                <input type="text" id="college" name="college" placeholder=" Your college name" required><br><br>
+            <form id="studentForm" action="" method="" onsubmit="">
+                <label for="college">Team name</label>
+                <input type="text" id="team-name" placeholder="Team name" required>
+                <br><br><br>
+                <div class="tru_con">
+                    <div class="id_elm">
+                        <label for="college">Member 1 (leader)</label><br>
+                        <div class="ip_flx">
+                            <input type="text" class="id_flds" id="mem1" name="Member-1" placeholder="Member ID"
+                                required><br><br>
+                        </div>
+                        <h6 class="nameOfID">student name</h6>
+                    </div>
+                </div>
 
-                <!-- Contact number field -->
-                <label for="contact">Contact Number:</label><br>
-                <input type="tel" id="contact" name="contact" required pattern="[0-9]{10}"
-                    placeholder=" 10 digits"><br><br>
+                <h4 onclick="add_mem_fld(3)">Add member <span><img src="img/add.svg" alt=""></span></h4>
 
-                <!-- Submit button -->
                 <input id="submit" type="submit" value="Submit">
             </form>
         </div>
@@ -186,8 +271,8 @@
         <div class="description">
             <h1>PROJECT XPO</h1>
             <p>
-                Embark on an innovative journey at "Project Xpo" where experts, scholars, and visionaries converge to showcase groundbreaking projects and inventive solutions. This prestigious platform fosters an environment where ideas flourish, and boundaries are pushed. Don’t miss the chance to participate in this transformative event, where creativity knows no bounds !
-            <br>
+                Embark on an innovative journey at "Project Xpo" where experts, scholars, and visionaries converge to showcase groundbreaking projects and inventive solutions. This prestigious platform fosters an environment where ideas flourish, and boundaries are pushed. Don’t miss the chance to participate in this transformative event, where creativity knows no bounds!
+                <br>
                 <a class="rule_book" href="https://drive.google.com/file/d/1FuANRxK5jcRMLy28lbZ-tIPLG-uMURjA/view?usp=sharing" target="_blank">RULE BOOK</a>
             </p>
             <div class="btn">REGISTER HERE</div>
@@ -197,50 +282,134 @@
             <div class="key">Registration Deadline : <span class="val"> 01 November 2024 </span></div>
             <div class="key"> For Further Information:
                 <div class="val">Abirami M - 9345445205</div>
-                 <div class="val">Logeshwaran K - 8610687966</div>
+                <div class="val">Logeshwaran K - 8610687966</div>
             </div>
         </div>
     </div>
-
-    <script src="https://www.gstatic.com/firebasejs/9.24.0/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.24.0/firebase-firestore.js"></script>
     <script type="module">
-        function validateForm(event) {
-            event.preventDefault();
 
-            var name = document.getElementById("name").value;
-            var college = document.getElementById("college").value;
-            var contact = document.getElementById("contact").value;
-            var contactPattern = /^[0-9]{10}$/; // Regex pattern for 10-digit numbers
-
-            // Validate form fields
-            if (name === "" || college === "" || contact === "") {
-                alert("All fields are required!");
-                return false;
-            }
-
-            // Validate contact number format
-            if (!contactPattern.test(contact)) {
-                alert("Please enter a valid 10-digit contact number.");
-                return false;
-            }
-
-            alert("Registed successfully!");
-            document.getElementById("frm_cv").style.display = 'none'
-        }
-
-        var rg = document.getElementById("frm_cnt")
-        rg.style.marginLeft = (window.innerWidth - rg.offsetWidth) / 2 + 'px'
-        document.getElementById("frm_cv").style.display = 'none'
+        var competitionID = "s7rC0nFh5afu6P98XQHX"
 
         import { get_details } from './login.js'
-     //   document.getElementsByClassName('btn')[0].onclick = reg_op
+        import { getStudentEmailById, getStudentByEmail, createTeam, isStudentRegisteredForCompetition } from "./reg.js"
+
+        var cur_std = ""
+
+        // document.getElementsByClassName('btn')[0].innerHTML
+
+        get_details().then((userDetails) => {
+            if (userDetails) {
+                console.log(userDetails);
+                    isStudentRegisteredForCompetition(userDetails.email, competitionID)
+                        .then(isRegistered => {
+                            if (isRegistered) {
+                                console.log("The student is registered for this competition.");
+                                document.getElementsByClassName('btn')[0].innerHTML = "Registered"
+                                document.getElementsByClassName('btn')[0].onclick = "unset"
+                            } else {
+                                document.getElementsByClassName('btn')[0].onclick = reg_op
+                                console.log("The student is not registered for this competition.");
+                            }
+                        });
+                
+            } else {
+                console.log("No user is signed in.");
+                alert("login before registering...");
+            }
+        }).catch((error) => {
+            console.error("Error getting user details:", error);
+        });
+
+
+        document.getElementById("studentForm").onsubmit = validateForm;
+        var flg_a = true
+        function validateForm(event) {
+            event.preventDefault();
+            // console.log("sdwd");
+            // return
+
+            if (flg_a) {
+                flg_a = false;
+                let fg = true;
+                let obj = {
+                    leader: "",
+                    members: []
+                };
+
+                // Collect all the promises for async calls
+                let promises = [];
+
+                // Get all elements with the class "id_flds"
+                document.querySelectorAll(".id_flds").forEach(elm => {
+                    if (fg) {
+                        obj.leader = elm.value;
+                        fg = false;
+                    } else {
+                        // Store each async getStudentEmailById call in the promises array
+                        const promise = getStudentEmailById(elm.value)
+                            .then((o) => {
+                                if (o) {
+                                    obj.members.push(elm.value);
+                                }
+                            }).catch(error => {
+                                console.error("Error occurred:", error);
+                                return
+                            });
+
+                        promises.push(promise); // Add the promise to the array
+                    }
+                });
+
+                // Once all promises are resolved, execute the final action
+                Promise.all(promises).then(() => {
+                    console.log("All data fetched, triggering final action...");
+                    // Trigger your final function or action here
+                    console.log(obj);
+                    var tmp_arr = obj.members
+                    tmp_arr.push(obj.leader)
+                    if (new Set(obj.members).size !== obj.members.length) {
+                        alert("Duplicate IDs not allowed");
+                    } else {
+                        getStudentEmailById(obj.leader)
+                            .then((o) => {
+                                if (o) {
+                                    createTeam(competitionID, document.getElementById("team-name").value, o.email, obj.leader).then(() => {
+                                        document.getElementsByClassName("btn")[0].innerHTML = "Registered";
+                                        document.getElementsByClassName("btn")[0].onclick = "unset";                                     
+                                        alert("registed successfully")
+                                        document.getElementById("frm_cv").style.display = "none";
+                                    })
+                                }
+                            }).catch(error => {
+                                console.error("Error occurred:", error);
+                                return
+                            });
+                    }
+                }).catch(error => {
+                    console.error("Error occurred during async operations:", error);
+                });
+
+            }
+        }
+
+        // document.getElementById("frm_cv").style.
+
+        var rg = document.getElementById("frm_cnt")
+        rg.style.marginLeft = (window.innerWidth - 354) / 2 + 'px'
+        document.getElementById("frm_cv").style.display = 'none'
+
         function reg_op() {
             get_details().then((userDetails) => {
                 if (userDetails) {
                     console.log("user loged in");
                     console.log(userDetails);
                     document.getElementById("frm_cv").style.display = 'block'
+                    document.getElementsByClassName("nameOfID")[0].innerHTML = userDetails.name
+                    getStudentByEmail(userDetails.email).then((dta) => {
+                        cur_std = dta.id;
+                        document.getElementById("mem1").value = dta.id;
+                        document.getElementById("mem1").readOnly = true;
+                    })
                 } else {
                     console.log("No user is signed in.");
                     alert("login before registering...");
@@ -254,7 +423,30 @@
         function reg_cl() {
             document.getElementById("frm_cv").style.display = 'none'
         }
+
+
+        document.addEventListener('click', function (event) {
+            // Check if the clicked element has the class 'gt_btn'
+            if (event.target.classList.contains('gt_btn')) {
+                // Call your function when a '.gt_btn' element is clicked
+                var nme_hre = event.target.parentElement.parentElement.getElementsByClassName("nameOfID")[0]
+                var if_fld = event.target.parentElement.getElementsByClassName("id_flds")[0]
+
+                getStudentEmailById(if_fld.value).then((obj) => {
+                    if (obj != null) {
+                        nme_hre.innerHTML = obj.name
+                        console.log("Retrieved Student Email:", obj.email); // Use obj.email since email is the expected property
+                    } else {
+                        nme_hre.innerHTML = "invalid"
+                    }
+                }).catch(error => {
+                    console.error("Error occurred:", error);
+                    alert("couldnt connect");
+                });
+            }
+        });
     </script>
 </body>
 <script src="lolita.js"></script>
+
 </html>
