--- a/el_futurix/ipl.html
+++ b/el_futurix/ipl.html
@@ -7,292 +7,6 @@
     <link rel="stylesheet" href="lolita.css">
     <title>Form Example</title>
 </head>
-<style>
-    @font-face {
-        font-family: sansation;
-        src: url(fonts/sansation.ttf);
-    }
-
-    body {
-        background-color: transparent;
-        color: aliceblue;
-        font-family: sansation;
-    }
-
-    input {
-        border: solid, white, 0 0 1px 0;
-        background-color: rgba(0, 0, 0, 0.604);
-        border-radius: 10px;
-        height: 30px;
-        padding-left: 15px;
-        width: 250px;
-        color: white;
-        font-size: larger;
-    }
-
-    #submit {
-        width: fit-content;
-    }
-
-    #submit:hover {
-        background-color: azure;
-        color: black;
-        font-weight: 700;
-    }
-
-    #frm_cv {
-        position: fixed;
-        top: 0;
-        left: 0;
-        right: 0;
-        bottom: 0;
-        background-color: #00000096;
-
-        /* padding: 20px; */
-        /* box-sizing: border-box; */
-        /* background-color: #79acffdd; */
-    }
-
-    #frm_cnt {
-        /* position: fixed; */
-        width: fit-content;
-        margin: 0;
-        margin-top: 50px;
-        padding: 20px;
-        border-radius: 15px;
-        background-color: rgba(0, 0, 0, 0.999);
-        position: relative;
-        overflow-y: auto;
-        max-height: calc(100vh - 150px);
-    }
-
-    #frm_cnt .close {
-        width: fit-content;
-        padding: 5px;
-        border-radius: 5px;
-        background-color: #272727;
-        position: absolute;
-        right: 10px;
-        text-align: end;
-        cursor: pointer;
-    }
-
-    #frm_cnt .close:hover {
-        background-color: #481313;
-    }
-
-    .container {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: center;
-        align-items: center;
-        padding: 20px;
-        background-color: rgba(61, 61, 61, 0.47);
-        margin: 20px;
-        border-radius: 20px;
-    }
-
-    .image {
-        flex: 1;
-        min-width: 500px;
-        max-width: 500px;
-        padding: 20px;
-    }
-
-    .image img {
-        width: 100%;
-        height: auto;
-        border-radius: 15px;
-    }
-
-    .description {
-        flex: 2;
-        padding: 20px;
-    }
-
-    h1 {
-        color: #ffffff;
-        font-size: 2rem;
-        margin-bottom: 10px;
-    }
-
-    p {
-        font-size: 1.2rem;
-        line-height: 1.6;
-        color: #bbbbbb;
-        background-color: #272727;
-        padding: 20px;
-        border-radius: 10px;
-    }
-
-    .container .btn {
-        background-color: #481313;
-        border-radius: 15px;
-        border-radius: 10px;
-        width: fit-content;
-        padding: 10px;
-        font-size: x-large;
-        cursor: pointer;
-    }
-
-    /* Responsive adjustments */
-    @media (max-width: 768px) {
-        .container {
-            flex-direction: column;
-        }
-
-        .description {
-            padding: 10px;
-        }
-
-        h1 {
-            font-size: 1.8rem;
-        }
-
-        p {
-            font-size: 1rem;
-        }
-    }
-
-    .key {
-        font-size: large;
-        color: rgb(11, 10, 10);
-        font-weight: 900;
-        padding: 10px;
-        background-color: #0f94e6f4;
-        border-radius: 10px;
-        width: fit-content;
-        margin-bottom: 20px;
-    }
-
-    .val {
-
-        padding: 5px;
-        color: azure;
-        margin-left: auto;
-        margin-top: 10px;
-    }
-
-    .key {
-  font-weight: 700;
-  font-size: x-large;
-  color: #00d9ff;
-  background-color: #2c0d0d;
-  border-radius: 5px;
-  padding: 5px;
-  width: fit-content;
-  margin-bottom: 5px;
-}
-
-.val {
-  font-weight: 100;
-  color: #ffffff;
-}
-
-body{
-  padding-bottom: 100px;
-}
-
-#frm_cnt input {
-  border: none;
-  border-bottom: solid #ffffff 1px;
-  border-radius: 0;
-}
-
-#frm_cnt #submit {
-  border: none;
-  border-radius: 5px;
-  background-color: aquamarine;
-  color: rgb(29, 27, 27);
-}
-
-.rule_book {
-  font-size: larger;
-  font-weight: 800;
-  color: #00D9FF;
-}
-
-input {
-  padding: 8px;
-  width: 70%;
-  /* height: 40px; */
-  margin: 0;
-  border: 0;
-}
-
-button {
-  padding: 8px 12px;
-  cursor: pointer;
-}
-
-.name-display {
-  font-size: 0.9em;
-  color: #555;
-  margin-top: 5px;
-}
-
-
-@media (max-width: 1000px) {
-  .container {
-    flex-direction: column;
-  }
-}
-
-@media (max-width: 550px) {
-  .container {
-    align-items: unset;
-  }
-} 
-
-@media (max-width: 430px) {
-  .container {
-    align-items: unset;
-  }
-} 
-
-.ip_flx{
-  display: flex;
-}
-
-.ip_flx button{
-  border: 0;
-  background-color: #00D9FF;
-  border-radius: 3px;
-  color: black;
-  font-size: x-large;
-  font-weight: 700;
-  height: 30px;
-  /* width: 40px; */
-  padding: 3px;
-  position: relative;
-  top: 10px;
-  margin-left: 10px;
-}
-
-.name{
-  font-size: small;
-  margin: 0;
-  color: #555;
-}
-
-.id_elm{
-  margin-bottom: 60px;
-}
-
-form h4{
-  cursor: pointer;
-}
-
-form h4:hover{
-  color: aqua;
-}
-
-form span{
-  position: relative;
-  top: 8px;
-}
-</style>
-
 <body>
 
     <div style="display: none;" id="frm_cv">
@@ -311,19 +25,18 @@ form span{
                         <div class="ip_flx">
                             <input type="text" class="id_flds" id="mem1" name="Member-1" placeholder="Member ID"
                                 required><br><br>
-                            <!-- <button class="gt_btn" type="button">Get</button> -->
                         </div>
                         <h6 class="nameOfID">student name</h6>
                     </div>
                 </div>
 
-                <h4 onclick="add_mem_fld(4)">Add member <span><img src="img/add.svg" alt=""></span></h4>
+                <h4 onclick="add_mem_fld(3)">Add member <span><img src="img/add.svg" alt=""></span></h4>
 
                 <input id="submit" type="submit" value="Submit">
             </form>
         </div>
-    </div> 
-    <div class="container">
+    </div>
+  <div class="container">
         <div class="image">
             <img src="img/thumbs/iplauction.png" alt="Competition Image">
         </div>
@@ -347,167 +60,16 @@ form span{
             </div>
         </div>
     </div>
-    <script src="https://www.gstatic.com/firebasejs/9.24.0/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.24.0/firebase-firestore.js"></script>
-    <script type="module">
-
-        var competitionID = "qezgMecXb91okgGcOSBL"
-
-        import { get_details } from './login.js'
-        import { getStudentEmailById, getStudentByEmail, createTeam, isStudentRegisteredForCompetition } from "./reg.js"
-
-        var cur_std = ""
-
-        // document.getElementsByClassName('btn')[0].innerHTML
-
-        get_details().then((userDetails) => {
-            if (userDetails) {
-                console.log(userDetails);
-                    isStudentRegisteredForCompetition(userDetails.email, competitionID)
-                        .then(isRegistered => {
-                            if (isRegistered) {
-                                console.log("The student is registered for this competition.");
-                                document.getElementsByClassName('btn')[0].innerHTML = "Registered"
-                                document.getElementsByClassName('btn')[0].onclick = "unset"
-                            } else {
-                                document.getElementsByClassName('btn')[0].onclick = reg_op
-                                console.log("The student is not registered for this competition.");
-                            }
-                        });
-                
-            } else {
-                console.log("No user is signed in.");
-                alert("login before registering...");
-            }
-        }).catch((error) => {
-            console.error("Error getting user details:", error);
-        });
 
 
-        document.getElementById("studentForm").onsubmit = validateForm;
-        var flg_a = true
-        function validateForm(event) {
-            event.preventDefault();
-            // console.log("sdwd");
-            // return
 
-            if (flg_a) {
-                flg_a = false;
-                let fg = true;
-                let obj = {
-                    leader: "",
-                    members: []
-                };
-
-                // Collect all the promises for async calls
-                let promises = [];
-
-                // Get all elements with the class "id_flds"
-                document.querySelectorAll(".id_flds").forEach(elm => {
-                    if (fg) {
-                        obj.leader = elm.value;
-                        fg = false;
-                    } else {
-                        // Store each async getStudentEmailById call in the promises array
-                        const promise = getStudentEmailById(elm.value)
-                            .then((o) => {
-                                if (o) {
-                                    obj.members.push(elm.value);
-                                }
-                            }).catch(error => {
-                                console.error("Error occurred:", error);
-                                return
-                            });
-
-                        promises.push(promise); // Add the promise to the array
-                    }
-                });
-
-                // Once all promises are resolved, execute the final action
-                Promise.all(promises).then(() => {
-                    console.log("All data fetched, triggering final action...");
-                    // Trigger your final function or action here
-                    console.log(obj);
-                    var tmp_arr = obj.members
-                    tmp_arr.push(obj.leader)
-                    if (new Set(obj.members).size !== obj.members.length) {
-                        alert("Duplicate IDs not allowed");
-                    } else {
-                        getStudentEmailById(obj.leader)
-                            .then((o) => {
-                                if (o) {
-                                    createTeam(competitionID, document.getElementById("team-name").value, o.email, obj.leader).then(() => {
-                                        alert("registed successfully")
-                                        document.getElementById("frm_cv").style.display = "none";
-                                        document.getElementsByClassName("btn")[0].style.innerHTML = "Registered"
-                                    })
-                                }
-                            }).catch(error => {
-                                console.error("Error occurred:", error);
-                                return
-                            });
-                    }
-                }).catch(error => {
-                    console.error("Error occurred during async operations:", error);
-                });
-
-            }
-        }
-
-        // document.getElementById("frm_cv").style.
-
-        var rg = document.getElementById("frm_cnt")
-        rg.style.marginLeft = (window.innerWidth - 354) / 2 + 'px'
-        document.getElementById("frm_cv").style.display = 'none'
-
-        function reg_op() {
-            get_details().then((userDetails) => {
-                if (userDetails) {
-                    console.log("user loged in");
-                    console.log(userDetails);
-                    document.getElementById("frm_cv").style.display = 'block'
-                    document.getElementsByClassName("nameOfID")[0].innerHTML = userDetails.name
-                    getStudentByEmail(userDetails.email).then((dta) => {
-                        cur_std = dta.id;
-                        document.getElementById("mem1").value = dta.id;
-                        document.getElementById("mem1").readOnly = true;
-                    })
-                } else {
-                    console.log("No user is signed in.");
-                    alert("login before registering...");
-                }
-            }).catch((error) => {
-                console.error("Error getting user details:", error);
-            });
-        }
-
-        document.getElementsByClassName('close')[0].onclick = reg_cl
-        function reg_cl() {
-            document.getElementById("frm_cv").style.display = 'none'
-        }
-
-
-        document.addEventListener('click', function (event) {
-            // Check if the clicked element has the class 'gt_btn'
-            if (event.target.classList.contains('gt_btn')) {
-                // Call your function when a '.gt_btn' element is clicked
-                var nme_hre = event.target.parentElement.parentElement.getElementsByClassName("nameOfID")[0]
-                var if_fld = event.target.parentElement.getElementsByClassName("id_flds")[0]
-
-                getStudentEmailById(if_fld.value).then((obj) => {
-                    if (obj != null) {
-                        nme_hre.innerHTML = obj.name
-                        console.log("Retrieved Student Email:", obj.email); // Use obj.email since email is the expected property
-                    } else {
-                        nme_hre.innerHTML = "invalid"
-                    }
-                }).catch(error => {
-                    console.error("Error occurred:", error);
-                    alert("couldnt connect");
-                });
-            }
-        });
+    <script>
+    var competitionID = "s7rC0nFh5afu6P98XQHX"
     </script>
+
+
+
+    <script type="module" src="mod_reg.js"></script>
 </body>
 <script src="lolita.js"></script>
 
